# academic-paper-data-consistency-audit

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
case_studies/: README.md
checklists/: pre_audit_checklist.md
demo/: README.md  demo_full_audit.py  demo_input.csv  demo_output_report.md
docs/: _config.yml  case_studies.md  cli_expected_outputs.md  examples_gallery.md  getting_started.md  index.md  language_safety.md  launch_kit.md  limitations_and_ethics.md  pages_setup.md  project_announcement.md  public_project_checklist.md  release_checklist.md  report_workflow.md  responsible_use.md  roadmap.md  structured_outputs.md  terminology.md  tutorial_complete_workflow.md  workflows.md  writing_style_guide.md
examples/: anonymized_case_study.md  example_recalculation_table.csv  report_config.json
methodology/: audit_framework.md  data_consistency_checks.md  evidence_claim_alignment.md  evidence_levels.md  image_integrity_checks.md  physics_consistency_checks.md  reproducibility_checks.md
scripts/: arrhenius_fit.py  dimensional_check.py  performance_ratio_check.py  statistics_check.py
templates/: author_response_tracker.md  editor_technical_comment_template.md  issue_log_template.md  pubpeer_style_issue_format.md  technical_audit_report_template.md
tests/: test_arrhenius_fit.py  test_cli.py  test_conductivity_geometry_check.py  test_demo.py  test_dimensional_check.py  test_faradaic_efficiency_check.py  test_output_formats.py  (+5 more)
(+54 files in other folders)
